# rust_grpc_finance_server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  docker-run.sh
.github/workflows/: rust.yml
config/: config.toml
proto/: finance.proto
src/: client.rs  config.rs  lib.rs  main.rs  server.rs  utils.rs
src/server/: handlers.rs  mod.rs  service.rs  stream.rs
tests/: integration_tests.rs
