[package]
name = "rust_grpc_finance_server"
version = "0.1.0"
edition = "2021"
description = "A gRPC server in Rust for simulating stock price streaming and providing statistical analysis."
authors = ["Paul Nikholas Lopez <nik.lopez381@gmail.com>"]
license = "MIT"
repository = "https://github.com/tembolo1284/rust_grpc_finance_server"

[lib]
name = "rust_grpc_finance_server"
path = "src/lib.rs"

[[bin]]
name = "rust_grpc_finance_server"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
futures = "0.3.30"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
tempfile = "3.10.0"
